# fnv_solver

./: CMakeLists.txt  LICENSE  Makefile  README  README.STP  constraint.cpp  constraint.hpp  fnv_algo.cpp  fnv_solution.cpp  fnv_solution.hpp  fnv_solver.cpp  fnv_solver.hpp  solver.cpp
src/: CMakeLists.txt  constraint.cpp  fnv_algo.cpp  fnv_algo.hpp  fnv_param.cpp  fnv_param.hpp  fnv_solution.cpp  fnv_solver.cpp  fnv_solver.hpp
stp/: fnv1a_size=32,constraint=none,input_size=32.stp  fnv_size=32,constraint=none,input_size=40.stp
